feat: modificacao no metodo de add bairro em loja